--- a/men.html
+++ b/men.html
@@ -619,7 +619,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <h5 class="mb-3"><img src="clothes-hanger.png" alt=""></h5>
+                    <h5 class="mb-3"><img src="blackhanger.png" alt=""></h5>
                     <b>
                         <p>INDO-WESTERN </p>
                     </b>
@@ -629,48 +629,48 @@
                         <div class="col-md-3">
                             <h6>Men's Collections</h6>
                             <ul class="list-unstyled">
-                                <li><a href="men.html#casualwear" class="text-light">Casual Wear</a></li>
-                                <li><a href="men.html#suitsnblazer" class="text-light">Suit's & Blazer</a></li>
-                                <li><a href="men.html#jackectnhoody" class="text-light">Jacket & Hoody</a></li>
-                                <li><a href="men.html#tshirtnjeans" class="text-light">T-shirt & Jeans</a></li>
-                                <li><a href="men.html#traditionalwear" class="text-light">Traditional Wear</a></li>
+                                <li><a href="men.html#casualwear" >Casual Wear</a></li>
+                                <li><a href="men.html#suitsnblazer" >Suit's & Blazer</a></li>
+                                <li><a href="men.html#jackectnhoody" >Jacket & Hoody</a></li>
+                                <li><a href="men.html#tshirtnjeans" >T-shirt & Jeans</a></li>
+                                <li><a href="men.html#traditionalwear" >Traditional Wear</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3">
                             <h6>Women's collection</h6>
                             <ul class="list-unstyled">
-                                <li><a href="women.html#formalwear" class="text-light">Formal Wear</a></li>
-                                <li><a href="women.html#ethnicwear" class="text-light">Ethnic Wear</a></li>
-                                <li><a href="women.html#sportswear" class="text-light">Sports Wear</a></li>
-                                <li><a href="women.html#westernwear" class="text-light">Western Wear</a></li>
+                                <li><a href="women.html#formalwear" >Formal Wear</a></li>
+                                <li><a href="women.html#ethnicwear" >Ethnic Wear</a></li>
+                                <li><a href="women.html#sportswear" >Sports Wear</a></li>
+                                <li><a href="women.html#westernwear" >Western Wear</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3">
                             <h6>Company</h6>
                             <ul class="list-unstyled">
-                                <li><a href="contact.html#faq" class="text-light">Pre-Sale FAQs</a></li>
-                                <li><a href="index.html#abtus" class="text-light">About Us</a></li>
-                                <li><a href="index.html#service" class="text-light">Our Services</a></li>
-                                <li><a href="index.html#vid" class="text-light">Our Video</a></li>
+                                <li><a href="contact.html#faq" >Pre-Sale FAQs</a></li>
+                                <li><a href="index.html#abtus" >About Us</a></li>
+                                <li><a href="index.html#service" >Our Services</a></li>
+                                <li><a href="index.html#vid" >Our Video</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3">
                             <h6>Explore</h6>
                             <ul class="list-unstyled">
-                                <li><a href="contact.html#mail" class="text-light">Mail Us</a></li>
-                                <li><a href="contact.html#map" class="text-light">Our Location</a></li>
+                                <li><a href="contact.html#mail" >Mail Us</a></li>
+                                <li><a href="contact.html#map" >Our Location</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
-            <hr class="bg-light">
+            <hr >
             <div class="d-flex justify-content-between align-items-center">
                 <div class="socialicon">
-                    <a href="#"><i class="fab fa-facebook-f text-light"></i></a>
-                    <a href="#" class="mx-2"><i class="fab fa-twitter text-light"></i></a>
-                    <a href="#"><i class="fab fa-google-plus-g text-light"></i></a>
-                    <a href="#" class="mx-2"><i class="fab fa-instagram text-light"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f "></i></a>
+                    <a href="#" class="mx-2"><i class="fab fa-twitter "></i></a>
+                    <a href="#"><i class="fab fa-google-plus-g "></i></a>
+                    <a href="#" class="mx-2"><i class="fab fa-instagram "></i></a>
                 </div>
                 <p class="mb-0">©2024 INDO-WESTERN. All Rights Reserved.</p>
             </div>
