--- a/contact.html
+++ b/contact.html
@@ -158,46 +158,40 @@
 
 
         /* footer */
-        .footer {
-            background-color: #000;
-        }
+.footer {
+    background-image: url(footerbg.jpg);
+}
 
-        .footer a {
-            color: #fff;
-            text-decoration: none;
-        }
+.footer a {
+    color: black;
+    text-decoration: none;
+}
 
-        .footer a:hover {
-            color: #3b1919;
-        }
+.footer a:hover {
+    color: #42474c;
+}
 
-        .footer h5,
-        .footer h6 {
-            font-weight: bold;
-            color: #fff;
-        }
+.footer h5,
+.footer h6 {
+    font-weight: bold;
+    color: #212529;
+}
 
-        .footer p {
-            color: #bbb;
-        }
+.footer p {
+    color: black;
+}
 
-        .footer i {
-            font-size: 1.2rem;
-        }
+.footer i {
+    font-size: 1.2rem;
+}
 
-        .footer i:hover {
-            color: #a34747;
-        }
+.footer i:hover {
+    color: #d64545ce;
+}
 
-        .hr {
-            border-color: #fff;
-        }
-        .footstyle li  a :hover {
-            color: red;
-        }
-       .footer-a :hover{
-        color: #a34747;
-       }
+.hr {
+    border-color: #fff;
+}
        
 
         /* Media Queries */
@@ -440,7 +434,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <h5 class="mb-3"><img src="clothes-hanger.png" alt=""></h5>
+                    <h5 class="mb-3"><img src="blackhanger.png" alt=""></h5>
                     <b>
                         <p>INDO-WESTERN </p>
                     </b>
@@ -450,48 +444,48 @@
                         <div class="col-md-3">
                             <h6>Men's Collections</h6>
                             <ul class="list-unstyled">
-                                <li><a href="men.html#casualwear" class="text-light">Casual Wear</a></li>
-                                <li><a href="men.html#suitsnblazer" class="text-light">Suit's & Blazer</a></li>
-                                <li><a href="men.html#jackectnhoody" class="text-light">Jacket & Hoody</a></li>
-                                <li><a href="men.html#tshirtnjeans" class="text-light">T-shirt & Jeans</a></li>
-                                <li><a href="men.html#traditionalwear" class="text-light">Traditional Wear</a></li>
+                                <li><a href="men.html#casualwear" >Casual Wear</a></li>
+                                <li><a href="men.html#suitsnblazer" >Suit's & Blazer</a></li>
+                                <li><a href="men.html#jackectnhoody" >Jacket & Hoody</a></li>
+                                <li><a href="men.html#tshirtnjeans" >T-shirt & Jeans</a></li>
+                                <li><a href="men.html#traditionalwear" >Traditional Wear</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3">
                             <h6>Women's collection</h6>
                             <ul class="list-unstyled  footstyle">
-                                <li><a href="women.html#formalwear" class="text-light footer-a">Formal Wear</a></li>
-                                <li><a href="women.html#ethnicwear" class="text-light">Ethnic Wear</a></li>
-                                <li><a href="women.html#sportswear" class="text-light">Sports Wear</a></li>
-                                <li><a href="women.html#westernwear" class="text-light">Western Wear</a></li>
+                                <li><a href="women.html#formalwear"">Formal Wear</a></li>
+                                <li><a href="women.html#ethnicwear" >Ethnic Wear</a></li>
+                                <li><a href="women.html#sportswear" >Sports Wear</a></li>
+                                <li><a href="women.html#westernwear" >Western Wear</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3">
                             <h6>Company</h6>
                             <ul class="list-unstyled">
-                                <li><a href="contact.html#faq" class="text-light">Pre-Sale FAQs</a></li>
-                                <li><a href="index.html#abtus" class="text-light">About Us</a></li>
-                                <li><a href="index.html#service" class="text-light">Our Services</a></li>
-                                <li><a href="index.html#vid" class="text-light">Our Video</a></li>
+                                <li><a href="contact.html#faq" >Pre-Sale FAQs</a></li>
+                                <li><a href="index.html#abtus" >About Us</a></li>
+                                <li><a href="index.html#service" >Our Services</a></li>
+                                <li><a href="index.html#vid" >Our Video</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3">
                             <h6>Explore</h6>
                             <ul class="list-unstyled">
-                                <li><a href="contact.html#mail" class="text-light">Mail Us</a></li>
-                                <li><a href="contact.html#map" class="text-light">Our Location</a></li>
+                                <li><a href="contact.html#mail" >Mail Us</a></li>
+                                <li><a href="contact.html#map" >Our Location</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
-            <hr class="bg-light">
+            <hr >
             <div class="d-flex justify-content-between align-items-center">
                 <div class="socialicon">
-                    <a href="#"><i class="fab fa-facebook-f text-light"></i></a>
-                    <a href="#" class="mx-2"><i class="fab fa-twitter text-light"></i></a>
-                    <a href="#"><i class="fab fa-google-plus-g text-light"></i></a>
-                    <a href="#" class="mx-2"><i class="fab fa-instagram text-light"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f "></i></a>
+                    <a href="#" class="mx-2"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                    <a href="#" class="mx-2"><i class="fab fa-instagram"></i></a>
                 </div>
                 <p class="mb-0">©2024 INDO-WESTERN. All Rights Reserved.</p>
             </div>
