--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <h5 class="card-title text-danger">Tailoring and Altering</h5>
                         <p class="card-text">The perfect cut for your fit is something we believe in. We offer the best
                             tailoring and altering options helping you look more classy.</p>
-                        <a href="#" class="btn btn-success shop-now-btn">Enquire Now</a>
+                        <a href="#" class="btn  shop-now-btn">Enquire Now</a>
                     </div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                         <h5 class="card-title text-danger">Wedding Special</h5>
                         <p class="card-text">We help you make your big day very special by providing unique and creative
                             designs of stitching making you look as beautiful as you can.</p>
-                        <a href="#" class="btn btn-success shop-now-btn">Enquire Now</a>
+                        <a href="#" class="btn shop-now-btn">Enquire Now</a>
                     </div>
                 </div>
             </div>
@@ -150,7 +150,7 @@
                         <h5 class="card-title text-danger">Suiting Fabric</h5>
                         <p class="card-text">Designing a suit requires great fabric. We provide a wide range of fabric
                             material that will suit your needs and render it with precision.</p>
-                        <a href="#" class="btn btn-success shop-now-btn">Enquire Now</a>
+                        <a href="#" class="btn  shop-now-btn">Enquire Now</a>
                     </div>
                 </div>
             </div>
@@ -162,7 +162,7 @@
                         <h5 class="card-title text-danger">Home Visit Tailor</h5>
                         <p class="card-text">We truly sense your busy schedule. Our master experts are available to
                             visit in your place for taking the necessary measurements.</p>
-                        <a href="#" class="btn btn-success shop-now-btn">Enquire Now</a>
+                        <a href="#" class="btn shop-now-btn">Enquire Now</a>
                     </div>
                 </div>
             </div>
