--- a/women.html
+++ b/women.html
@@ -274,7 +274,7 @@
                 <div class="card trans">
                     <img src="trending.jpeg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Knude Pink Stoned Bridal Traditional Floor Touch Flared Gown</h5>
+                        <h5 class="card-title">Nude Pink Stoned Bridal Floor Touch Flared Gown</h5>
                         <p class="card-text">₹7,999</p>
                         <a href="#" class="shop-now-btn">Shop Now</a>
                     </div>
@@ -357,7 +357,7 @@
                 <div class="card ethnic">
                     <img src="ethnic5.jpg" class="card-img-top" alt="...">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Black Up Down Flare Embroidered Cropped Woven Set</h5>
+                        <h5 class="card-title">Black Up Down Flare Embroidered Woven Set</h5>
                         <p class="card-text">₹1,999</p>
                         <a href="#" class="shop-now-btn">Shop Now</a>
                     </div>
@@ -403,7 +403,7 @@
             <div class="card trans">
                 <img src="sport-3.jpg" class="card-img-top sportimg" alt="...">
                 <div class="card-body text-center">
-                    <h5 class="card-title">Zipper Running Summer Track Suit</h5>
+                    <h5 class="card-title">Zipper Running Track Suit</h5>
                     <p class="card-text">₹4,599</p>
                     <a href="#" class="shop-now-btn">Shop Now</a>
                 </div>
@@ -466,39 +466,41 @@
     <!-- Testimonial -->
     <section class="testimonials py-5">
         <div class="container">
-            <h2 class="text-center heading m-5">Testimonials</h2>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="card testimonial-card p-4">
-                        <div class="d-flex align-items-center mb-3">
-                            <div class="icon-bg me-3">
-                                <img src="testiside.png" class="testimonialside" alt="">
+            <h2 class="text-center heading m-5 ">Testimonials</h2>
+
+
+            <div class="Testimonial-container">
+                <div>
+                    <a class="Testimonial-card" href="#">
+                        <h3>Jenifer Taylor</h3>
+                        <img id="testimonial-img" src="testimonial1.png" alt="">
+                        <p class="small">"I am constantly impressed by the quality and style of the clothing at Glamour Store.
+                            The
+                            pieces I've purchased have become staples in my wardrobe, and I always receive compliments whenever
+                            I
+                            wear them."</p>
+                        <div class="go-corner" href="#">
+                            <div class="go-arrow">
+                                →
                             </div>
-                            <img src="testimonial1.png" alt="Mia Wilson" class="rounded-circle" width="50">
                         </div>
-                        <h5 class="card-title test text-alert">Mia Wilson</h5>
-                        <p class="card-text">
-                            "I am constantly impressed by the quality and style of the clothing at Glamour Store. The
-                            pieces I've purchased have become staples in my wardrobe, and I always receive compliments
-                            whenever I wear them."
-                        </p>
-                    </div>
+                    </a>
                 </div>
-                <div class="col-md-6">
-                    <div class="card testimonial-card p-4">
-                        <div class="d-flex align-items-center mb-3">
-                            <div class="icon-bg me-3">
-                                <img src="testiside.png" class="testimonialside" alt="">
+                <div>
+                    <a class="Testimonial-card" href="#">
+                        <h3>Mia Wilson</h3>
+                        <img id="testimonial-img" src="testimonial2.png" alt="">
+                        <p class="small">"I am constantly impressed by the quality and style of the clothing at Glamour Store.
+                            The
+                            pieces I've purchased have become staples in my wardrobe, and I always receive compliments whenever
+                            I
+                            wear them.".</p>
+                        <div class="go-corner" href="#">
+                            <div class="go-arrow">
+                                →
                             </div>
-                            <img src="testimonial2.png" alt="Jennifer Taylor" class="rounded-circle" width="50">
                         </div>
-                        <h5 class="card-title test text-alert">Jennifer Taylor</h5>
-                        <p class="card-text">
-                            "I am constantly impressed by the quality and style of the clothing at Glamour Store. The
-                            pieces I've purchased have become staples in my wardrobe, and I always receive compliments
-                            whenever I wear them."
-                        </p>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
