--- a/men.html
+++ b/men.html
@@ -166,7 +166,7 @@
                     <img src="https://static.aceomni.cmsaceturtle.com/prod/product-image/aceomni/Lee/Monobrand/LMJN004606/LMJN004606_1.jpg"
                         class="card-img-top tradimg" alt="Product">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Washed Skinny Faded Fit Jeans</h5>
+                        <h5 class="card-title">Skinny Faded Fit Jeans</h5>
                         <p class="card-text">₹999</p>
                         <a href="#" class="shop-now-btn">Shop Now</a>
                     </div>
@@ -188,7 +188,7 @@
                     <img src="https://static.aceomni.cmsaceturtle.com/prod/product-image/aceomni/Lee/Monobrand/LMJN003804/LMJN003804_1.jpg"
                         class="card-img-top tradimg" alt="Product">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Regular Fit Washed Cargo Jeans</h5>
+                        <h5 class="card-title">Regular Fit Cargo Jeans</h5>
                         <p class="card-text">1,299</p>
                         <a href="#" class="shop-now-btn">Shop Now</a>
                     </div>
@@ -286,7 +286,7 @@
                 <div class="card h-100 simtrans">
                     <img src="mcasual3.jpg" class="card-img-top casimg" alt="Product">
                     <div class="card-body text-center">
-                        <h5 class="card-title">Relaxed Fit Striped Casual Shirt</h5>
+                        <h5 class="card-title">Relaxed Fit Striped Shirt</h5>
                         <p class="card-text">₹1,999</p>
                         <a href="#" class="shop-now-btn">Shop Now</a>
                     </div>
@@ -400,7 +400,7 @@
                     <img src="tshirt3.jpg" class="card-img-top tshirtimg1" alt="Product 3">
                     <img src="tshirt3.3jpeg.jpg" class="card-hover-img tshirtimg2" alt="Hover Image 3">
                     <div class="card-body">
-                        <h5 class="card-title">Brown Patched Stylish T-shirt</h5>
+                        <h5 class="card-title">Brown Print Stylish T-shirt</h5>
                         <p class="card-text">₹599</p>
                         <a href="#" class="shop-now-btn">Shop Now</a>
                     </div>
